--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "ng-scrollreveal": "^2.2.0",
+    "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~7.8.0",
+    "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
