--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "ng-scrollreveal": "^2.2.0",
     "ngx-scrollreveal": "^3.0.0",
     "rxjs": "~7.8.0",
+    "scrollmagic": "^2.0.8",
     "scrollreveal": "^4.0.9",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
+    "waypoints": "^4.0.1",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
