chore: Update Angular dependencies to version 17.3.7

--- a/angular.json
+++ b/angular.json
@@ -69,19 +69,19 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-						"production": {
-							"browserTarget": "educofinApp:build:production"
+            "production": {
+              "buildTarget": "educofinApp:build:production"
 						},
-						"development": {
-							"browserTarget": "educofinApp:build:development"
+            "development": {
+              "buildTarget": "educofinApp:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "educofinApp:build"
+          "options": {
+            "buildTarget": "educofinApp:build"
 					}
 				},
 				"test": {
